Funcionalidad de Conversion Actualiza y Funcional

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3007
- 
+
 URI_MONGO=mongodb://localhost:27017/finalProject
- 
+
 SECRETPRIVATEKEY=LecheFenix01
 
-CURRENCYFREAKS_API_KEY=7a9635bac2594c1f9420cea3e95f006b
+CURRENCYFREAKS_API_KEY="7a9635bac2594c1f9420cea3e95f006b"
