--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "mongoose": "^8.10.1",
     "mongoose-autopopulate": "^1.1.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.9",
-    "timespan": "^2.3.0"
+    "nodemon": "^3.1.9"
   },
   "type": "module",
   "devDependencies": {
