--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "mongoose": "^8.10.1",
     "mongoose-autopopulate": "^1.1.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0"
   },
   "type": "module",
   "devDependencies": {
