--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=3002
+PORT=3000
 
-URI_MONGO=mongodb://localhost:27017/finalProject
+URI_MONGO=mongodb://127.0.0.1:27017/finalProject
 
-SECRETPRIVATYKEY=LecheFenix01
+SECRETPRIVATEKEY=LecheFenix01
