--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.41.1",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
+    "mongoose-autopopulate": "^1.1.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
-    "timespan": "^2.3.0"
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@faker-js/faker": "^9.8.0"
+  }
 }
