--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.10.1",
     "mongoose-autopopulate": "^1.1.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "nodemon": "^3.1.9",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0"
