--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 
-URI_MONGO=mongodb://127.0.0.1:27017/finalProject
+URI_MONGO=mongodb+srv://cristiannlima2:WrFEXrUaHVK5KsnT@cluster0.9v7pbbk.mongodb.net/
 
 SECRETPRIVATEKEY=LecheFenix01
 
